tests/try/then_given.stderr
error: Only "and_then" is allowed inside "then" section
 --> tests/try/then_given.rs:9:17
  |
9 |                 'given_something: {
  |                 ^^^^^^^^^^^^^^^^
